--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,12 @@
 ul {
   list-style-type: none;
 }
-
 /* general */
 .bold {
   font-weight: 900;
+}
+
+/* -------------------- */
+.repo-card-content p {
+  padding: 0.4rem;
 }
